--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <groupId>com.facebook.ads.sdk</groupId>
     <artifactId>facebook-java-ads-sdk</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.0.5</version>
-    <name>facebook-java-ads-sdk</name>
+    <version>0.4.0.6</version>
+    <name>my facebook-java-ads-sdk</name>
     <url>https://developers.facebook.com/docs/marketing-api/sdks</url>
 
     <properties>
